--- a/style.css
+++ b/style.css
@@ -120,3 +120,14 @@ h4 {
 #lucro {
     display: inline;
 }
+
+#meuSpinner {
+    z-index: 10;
+    height: 100vh;
+    width: 100vw;
+    position: fixed;
+    top: 0;
+    left: 0;
+    margin: 0;
+    background-color: rgba(255, 255, 255, 0.5);
+}
